--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -967,8 +967,7 @@ footer p {
   margin-bottom: 20px; }
 
 .services-list ul {
-  display: flex;
-  justify-content: space-between;
+  margin: auto;
   list-style: none;
   margin-top: 20px; }
 
@@ -977,14 +976,20 @@ footer p {
   font-size: 14px;
   font-weight: 900;
   letter-spacing: 2.7px;
-  width: 25%;
+  margin-bottom: 10px;
   text-align: center; }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .custom-home {
     padding-right: 15px;
-    padding-left: 15px; } }
+    padding-left: 15px; }
+  .services-list ul {
+    display: flex;
+    justify-content: space-between; }
+  .services-list li {
+    max-width: 25%;
+    margin-bottom: 0; } }
 
 .gallery-list {
   list-style: none;
